--- a/Day-13/package.json
+++ b/Day-13/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "day-13",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"name": "day-13",
+	"version": "1.0.0",
+	"description": "--- Day 13: Transparent Origami ---  ",
+	"main": "index.js",
+	"type": "module",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "vishnup95",
+	"license": "ISC"
 }
